[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "performer"
version = "1.0.0"
readme = "README.md"
description = "For fine-tuning Enformer using paired WGS & gene expression data"

authors = [
	"Shiron Drusinsky",
	"Sean Whalen",
	"Katherine S. Pollard"
]

packages = [
	{ include = "performer" },
	{ include = "data" },
	{ include = "pyproject.toml" }
]

[tool.poetry.urls]
Source = "https://github.com/shirondru/enformer_fine_tuning"

[tool.poetry.dependencies]
python = "^3.12 <4.0"
enformer_pytorch = "*"
kipoiseq = "*"
pysam = "*"
wandb = "*"
vcfpy = "*"

[tool.poetry.group.test.dependencies]
pytest = "*"
tomli = "*"

[tool.setuptools.packages.find]
where = ["code"]